--- a/tebak nomerku/index.html
+++ b/tebak nomerku/index.html
@@ -17,13 +17,13 @@
     <main>
       <section class="left">
         <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
+        <button class="btn check">Periksa!</button>
       </section>
       <section class="right">
         <p class="message">Mulai menebak...</p>
-        <p class="label-score">💯 Score: <span class="score">20</span></p>
+        <p class="label-score">💯 Skor: <span class="score">20</span></p>
         <p class="label-highscore">
-          🥇 Highscore: <span class="highscore">0</span>
+          🥇 Skor tertinggi: <span class="highscore">0</span>
         </p>
       </section>
     </main>
